--- a/To_Do_15.css
+++ b/To_Do_15.css
@@ -1,11 +1,13 @@
 .container1{
-    border: solid;
+    border: solid 15px;
     height: 300px;
     display: grid;
+    gap: 15px;
     grid-template: 
-    "block2 block2 block3"
+    "block1 block2 block3"
     "block4 block5 block6"
-    ;
+    ; 
+    background-color: black;
 }
 .block1{
     background-color: rgb(251, 93, 2);
@@ -27,12 +29,13 @@
 }
 
 .grid-container2{
-    border: solid;
+    gap: 15px;
+    border: solid 15px;
     height: 50vh;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
-
+    background-color: black;
 }
 .block21{
     grid-column: span 2;
@@ -50,10 +53,11 @@
 }
 
 .grid-container3{
-    border: solid;
+    border: solid 15px;
     height: 50vh;
     display: grid;
-
+     gap: 10px;
+     background-color: black;
 }
 .block31{
     background-color: rgb(251, 93, 2);
@@ -72,9 +76,11 @@ grid-column: span 3;
 }
 
 .container4{
-    border: solid;
+    border: solid 15px;
     height: 50vh;
     display: grid;
+    gap: 5px;
+    background-color: black;
 }
 .block41{
     background-color: rgb(251, 93, 2);
@@ -95,6 +101,254 @@ grid-column: span 2;
 .block43{
     background-color: rgb(234, 179, 77);
     grid-column: span 4;
+
+}
+.container5{
+    border: solid 15px;
+    height: 300px;
+    display: grid;
+    gap: 15px;
+    background-color: black;
+}
+.block51{
+    background-color: rgb(251, 93, 2);
+    grid-area: 2/6/3/7;
+}
+.block52{
+    background-color: rgb(255, 140, 0);
+    grid-area: 1/2/2/3;
+}
+.block53{
+    background-color: rgb(234, 179, 77);
+    grid-area: 2/1/3/2;
+}
+.block54{
+    background-color: rgb(32, 54, 32);
+    grid-area: 1/1/2/2;
+}
+.block55{
+    background-color: rgb(35, 136, 35);
+    grid-area: 1/3/2/4;
+}
+.block56{
+    background-color: rgb(22, 188, 22);
+    grid-area: 1/5/2/6;
+}
+.block57{
+    background-color: rgb(251, 93, 2);
+    grid-area: 1/4/2/5;
+}
+.block58{
+    background-color: rgb(255, 140, 0);
+    grid-area: 1/6/2/7;
+}
+.block59{
+    background-color: rgb(234, 179, 77);
+    grid-area: 2/5/3/6;
+}
+.block510{
+    background-color: rgb(32, 54, 32);
+    grid-area: 2/2/3/3;
+}
+.block511{
+    background-color: rgb(35, 136, 35);
+}
+.block512{
+    background-color: rgb(22, 188, 22);
+    grid-area: 2/4/3/5;
+}
+.block513{
+    background-color: rgb(251, 93, 2);
+    grid-area: 3/2/4/3;
+}
+.block514{
+    background-color: rgb(255, 140, 0);
+    grid-area:2/3/3/4;
+}
+.block515{
+    background-color: rgb(234, 179, 77);
+    grid-area: 3/4/4/5;
+}
+.block516{
+    background-color: rgb(32, 54, 32);
+    grid-area: 3/5/4/6;
+}
+.block517{
+    background-color: rgb(35, 136, 35);
+}
+.block518{
+    background-color: rgb(22, 188, 22);
+}
+.container6{
+    border: solid 15px;
+    height: 300px;
+    display: grid;
+    grid-template-columns:auto auto auto auto;
+    grid-template-rows:auto auto auto auto auto;
+    gap: 5px;
+    background-color: black;
+}
+.block61{
+    background-color: rgb(251, 93, 2);
+    grid-area: 1/1/2/3;
+}
+.block62{
+    background-color: rgb(255, 140, 0);
+    grid-area: 2/1/3/2;
+}
+.block63{
+    background-color: rgb(234, 179, 77);
+    grid-area: 1/4/2/5;
+}
+.block64{
+    background-color: rgb(32, 54, 32);
+    grid-area: 1/3/3/4;
+}
+.block65{
+    background-color: rgb(251, 93, 2);
+    grid-area: 3/4/4/5;
+}
+.block66{
+    background-color: rgb(22, 188, 22);
+    grid-area: 2/3/3/4;
+}
+.block67{
+    background-color: rgb(234, 179, 77);
+    grid-area:3/1/5/3 ;
+}
+.block68{
+    background-color: rgb(234, 179, 77);
+    grid-area: 5/5/5/4;
+}
+.block69{
+    background-color: rgb(22, 188, 22);
+    grid-area: 5/1/6/4;
+}
+.block610{
+    background-color: rgb(22, 188, 22);
+    grid-area: 3/3/4/4;
+}
+.block611{
+    background-color: rgb(32, 54, 32);
+    grid-area: 2/2/3/3;
+}
+.block612{
+    background-color: rgb(32, 54, 32);
+    grid-area: 4/3/5/4;
+}
+.container7{
+    border: solid 15px;
+    height: 300px;
+    display: grid;
+    background-color: black;
+    gap: 15px;
+}
+.block71{
+    background-color: rgb(251, 93, 2);
+    grid-area: 2/1/4/3;
+}
+.block72{
+    background-color: rgb(255, 140, 0);
+    grid-area: 1/1/2/3;
+}
+.block77{
+    background-color: rgb(32, 54, 32);
+    grid-area: 2/3/4/5;
+}
+.block73{
+    background-color: rgb(255, 140, 0);
+    grid-area: 3/4/4/5;
+    z-index: 1;
+    margin: 10px;
+}
+.block74{
+    background-color: rgb(35, 136, 35);
+    grid-area: 1/3/2/5;
+}
+.block75{
+    background-color: rgb(35, 136, 35);
+    grid-area: 2/3/3/5;
+    margin: 10px;
+}
+.block76{
+    background-color: rgb(22, 188, 22);
+    grid-area: 3/3/4/4;
+    margin: 10px;
+}
+.container8{
+    border: solid 15px;
+    height: 300px;
+    display: grid;
+    gap: 15px;
+    grid-template-columns:auto auto auto auto auto;
+    grid-template-rows:auto auto auto;
+    background-color: black;
+    
+}
+
+.block81{
+    background-color: rgb(251, 93, 2);
+    grid-area:0/0/1/1 ;
+}
+.block82{
+    background-color: rgb(255, 140, 0);
+}
+.block83{
+    background-color: rgb(251, 93, 2);
+}
+.block84{
+    background-color: rgb(32, 54, 32);
+    grid-area: 1/5/2/6;
+}
+.block85{
+    background-color: rgb(35, 136, 35);
+    grid-area: 1/4/2/5;
+}
+.block86{
+    background-color: rgb(22, 188, 22);
+    grid-area: 1/3/2/4;
+}
+.block87{
+    background-color: rgb(255, 140, 0);
+    grid-area: 2/1/3/2;
+}
+.block88{
+    background-color: rgb(255, 140, 0);
+    grid-area: 2/3/3/6;
+}
+.block89{
+    background-color: rgb(22, 188, 22);
+    grid-area: 3/1/4/6;
+}
+.container9{
+    border: solid 15px;
+    height: 300px;
+    display: grid;
+    grid-template-columns:auto auto auto ;
+    grid-template-rows:auto auto auto ; 
+    gap: 10px;
+    background-color: black;
+    
+}
+.block91{
+    background-color: rgb(251, 93, 2);
+}
+.block93{
+    background-color: rgb(234, 179, 77);
+    grid-area: 1 / 1 / 2 / 4;
+}
+.block92{
+    background-color: rgb(234, 179, 77);
+    grid-area: 1 / 1 / 2 / 4;
+    grid-area: 3/3/4/4;
+}
+.block94{
+    background-color: rgb(32, 54, 32);
+    grid-area: 2/1/4/2 ;
+}
+.block96{
+    background-color: rgb(22, 188, 22);
+    grid-area: 2/2/3/4
 }
 
 
